objects/ssot__ClaimPayment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustedAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentReasonId__c</fullName>
        <label>Adjustment Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationDateTime__c</fullName>
        <label>Cancellation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimPayment_ClaimId_map_Claim_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimPayment_ClaimId_map_Claim_Id_N_1</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimPayment_ClaimId_map_Claim_Id_N_1</relationshipLabel>
        <relationshipName>ClaimPayment_ClaimId_map_Claim_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Payment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentDateTime__c</fullName>
        <label>Payment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentIdentifier__c</fullName>
        <label>Payment Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentTypeId__c</fullName>
        <label>Payment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128326803_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimPayment_AdjustmentReasonId_map__rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ClaimPayment_AdjustmentReasonId_map__rel</relationshipLabel>
        <relationshipName>rel_1723128326803_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128330599_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimPayment_PaymentTypeId_map_CodeS_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ClaimPayment_PaymentTypeId_map_CodeS_rel</relationshipLabel>
        <relationshipName>rel_1723128330599_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>